# assignment-01

./: CMakeLists.txt  assignment-01.cmake
core/: color.cpp  point.cpp  point.h  scalar.h  vector.cpp  vector.h
main/: a_cameras.cpp  main.cpp
rt/: ray.cpp  renderer.cpp
rt/cameras/: environment.cpp  environment.h  fisheye.cpp  fisheye.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
